--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
         body {
             background-color: #333;
             font-family: Arial, sans-serif;
-            background-color: #808080;
-            //background-color: #FFFFFF;
+           // background-color: #808080;
+            background-color: #FFFFFF;
             color: #333;
         }
 
